# PlayerConverter

./: .gitignore  CMakeLists.txt  README.md  add_format  compile_audio_data  make_executable
audio/: cello.aiff
include/: audio_data.h  audio_data_player.h  audio_format.h
src/: audio_data.cc  audio_data_player.cc  main.cc
src/audio_data/: audio_data.cc
src/formats/: CMakeLists.txt  README.md  aiff.cc  wav.cc
src/formatters/: README.md  aiff.cc  wav.cc
src/include/: audio_data.h
src/player/: sio_sine.c
